fixed spacing, active NavLinks, and some margins

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ a:hover {
     color:hsla(43, 100%, 49%, 1);
 }
 
+
 .navbar {
     display: flex;
     justify-content: flex-start;
@@ -50,6 +51,12 @@ a:hover {
     list-style-type: none;
 }
 
+
+a.active {
+   color: hsla(0, 0%, 0%, 0.69);
+   border-bottom: hsla(43, 100%, 49%, 1) solid 1px;
+}
+
 .about {
     font-family: 'droid-sans', sans-serif;
     margin: 1em;
@@ -59,8 +66,13 @@ a:hover {
 .about h2 {
     font-size: 2em;
     font-weight: 600;
+    margin-left: .5em;
     margin-bottom: 1em;
     color: hsla(0, 0%, 0%, 0.69);
+}
+
+.about p {
+    margin-left: 1em;
 }
 
 .projects-container {
@@ -78,9 +90,15 @@ a:hover {
 .projects-container__title {
     font-size: 2em;
     font-weight: 600;
+    margin-left: 0.5em;
     margin-bottom: 1em;
     color: hsla(0, 0%, 0%, 0.69);
     font-family: 'droid-sans', sans-serif;
+}
+
+.project{
+    margin-bottom: 1em;
+    padding: 1em;
 }
 
 .footer {
